Encapsulate algorithm parts in internal_logic
